modificacion index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-lapruebita 
+<!DOCTYPE html>
+<html>
+<head>
+    
+    <title>Document</title>
+</head>
+<body>
+    <h1>HEY HOLA</h1>
+</body>
+</html>
